--- a/index.html
+++ b/index.html
@@ -5,12 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <style>
+        body {background-color: #23272a}
         #screen {
             background-color: #000;
             color: #fff;
             font-family: monospace;
             height: 75vh;
             padding: 1em;
+            overflow-y: scroll;
+            overflow-wrap: break-word;
+            border-radius: 3vh;
         }
     </style>
 </head>
